--- a/app/src/main/res/layout/fragment_home_subscription_all_plan.xml
+++ b/app/src/main/res/layout/fragment_home_subscription_all_plan.xml
@@ -45,7 +45,7 @@
             <RelativeLayout
                 android:id="@+id/relSubscriptionFrame"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_280sdp"
                 android:layout_below="@+id/tvTittles"
                 android:background="@drawable/subscription_main_image">
 
