--- a/app/src/main/res/layout/activity_intro_page.xml
+++ b/app/src/main/res/layout/activity_intro_page.xml
@@ -57,6 +57,7 @@
                     android:layout_centerInParent="true"
                     android:paddingVertical="@dimen/_10sdp"
                     android:text="Next"
+                    android:fontFamily="@font/poppins"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_12sdp" />
 
